Add sponsor: Graduate Hotels

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -71,5 +71,10 @@ Sponsors
     </td>
   </tr>
   <tr>
+    <td>
+      <a href="//graduatehotels.com/">
+        <%= image_tag 'sponsors-graduatehotels.png', class: 'img-responsive' %>
+      </a>
+    </td>
   </tr>
 </table>
