New logo for Iberia Bank

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -41,7 +41,7 @@ Sponsors
     </td>
     <td>
       <a href="//www.iberiabank.com/">
-        <%= image_tag 'sponsors-iberia.gif', class: 'img-responsive' %>
+        <%= image_tag 'sponsors-iberia.png', class: 'img-responsive' %>
       </a>
     </td>
     <td>
