Add logo for Mannings Restaurant

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -76,5 +76,8 @@ Sponsors
         <%= image_tag 'sponsors-graduatehotels.png', class: 'img-responsive' %>
       </a>
     </td>
+    <td>
+      <%= image_tag 'sponsors-mannings.png', class: 'img-responsive' %>
+    </td>
   </tr>
 </table>
