Add camp reminders

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,6 +29,12 @@ title: "Official Home Page"
         -->
 
         <div class="item active">
+          <% link_to '/documents/reminders.pdf' do %>
+            <%= image_tag 'carousel-reminders.png', alt: '2015 MPA Reminders' %>
+          <% end %>
+        </div>
+
+        <div class="item">
           <% link_to '/page/purpose/' do %>
             <%= image_tag 'carousel-2015-mpa.png', alt: '2015 MPA' %>
           <% end %>
