Add start/end dates for 2016

--- a/source/page/important-dates.html.md.erb
+++ b/source/page/important-dates.html.md.erb
@@ -12,9 +12,9 @@ fee thereafter)
 
 **Drop From Roster, No Refunds** - June 1, 2015
 
-**Camp Begins** - July 9, 2015
+**Camp Begins** - <%= start_date.strftime "%M %-d, %Y" %>
 
-**Camp Ends** - July 12, 2015
+**Camp Ends** - <%= end_date.strftime "%M %-d, %Y" %>
 
 **Refunds Processed** - August 1, 2015
 
