Use confirmation_link helper

--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -7,7 +7,7 @@ Preparing for Camp
 
 * Make sure that all of your information (name, grade, email address,
   contact numbers, etc.) is correct on the
-  [confirmation page](https://campregistrationsystems.com/manning-passing-academy/2015-manning-passing-academy/confirmation)
+  [confirmation page](<%= confirmation_link %>)
   page so that you are grouped correctly during drills and 7 on 7.
 * All balances must be paid in full by May 15 or else you may incur a
   $100 late fee or be dropped from the rolls. No exceptions.
