Use erb prepocessing, and use confirmation_link helper

--- a/source/page/faq.html.md.erb
+++ b/source/page/faq.html.md.erb
@@ -88,7 +88,7 @@ Information](/page/medical-information) page for full details.
 **A.** All campers will receive an automatic confirmation email after their
 application is processed. Because this is an automated email, they sometimes get
 caught by SPAM filters. Due to this, we also offer a [Confirmation
-Page](https://campregistrationsystems.com/camps/2015-manning-passing-academy/campers/confirmation).
+Page](<%= confirmation_link %>).
 
 **Q.** Is transportation available to get to camp?  
 **A.** There is an Airport Shuttle (offered by a private company) that is
