--- a/source/page/important-dates.html.md.erb
+++ b/source/page/important-dates.html.md.erb
@@ -7,15 +7,15 @@ Important Dates
 
 **Reigistration Begins** - October 1, 2014
 
-**Payment-in-Full for Pre-Registered Campers** - May 15, 2015 ($100 late
-fee thereafter)
+**Payment-in-Full for Pre-Registered Campers** - <%= balance_due_date.strftime "%M %-d, %Y" %>
+($100 late fee thereafter)
 
-**Drop From Roster, No Refunds** - June 1, 2015
+**Drop From Roster, No Refunds** - <%= drop_from_roster_date.strftime "%M %-d, %Y" %>
 
 **Camp Begins** - <%= start_date.strftime "%M %-d, %Y" %>
 
 **Camp Ends** - <%= end_date.strftime "%M %-d, %Y" %>
 
-**Refunds Processed** - August 1, 2015
+**Refunds Processed** - <%= refund_date.strftime "%M %-d, %Y" %>
 
 <%= image_tag 'important-dates.jpg', class: 'img-responsive img-thumbnail' %>
