--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,8 +59,10 @@ title: "Official Home Page"
 
 <div id="secondary-header">
   <div class="container">
-    <h1>2015 MANNING PASSING ACADEMY</h1>
-    <h2>THURSDAY, JULY 9 - SUNDAY, JULY 12, 2015</h2>
+    <h1><% year %> MANNING PASSING ACADEMY</h1>
+    <h2>
+      <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
+    </h2>
     <!--
     <%= link_to 'Sign Up Now!', online_registration_link,
       class: 'btn btn-lg btn-danger' %>
