Use date helpers

--- a/source/page/media-only.html.md.erb
+++ b/source/page/media-only.html.md.erb
@@ -9,9 +9,10 @@ Media Information
 -----------------
 
 We hope this page will assist media members and answer questions
-concerning the 2015 Manning Passing Academy held on the campus of
-Nicholls State University in Thibodaux, La. on July 9-12. Please read
-the following information and guidelines below:
+concerning the <%= year %>Manning Passing Academy held on the campus of
+Nicholls State University in Thibodaux, La. on
+<%= "#{start_date.strftime('%B %-d')}-#{end_date.strftime('%-d')}" %>.
+Please read the following information and guidelines below:
 
 **MEDIA CONTACT** - Gregory Blackwell [gregb0663@att.net](mailto:gregb0663@att.net)
 
