Registration coming soon

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,8 +5,8 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-The 2015 Manning Passing Academy is Now Closed
-----------------------------------------------
+Registration for the 2016 MPA is Coming Soon!
+---------------------------------------------
 
 * <strike>Online Registration</strike>
 * <strike>Printable Application</strike>
