--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -5,18 +5,21 @@ title: "Tuition"
 Tuition
 =======
 
-The 2015 Manning Passing Academy is Now Closed
-----------------------------------------------
+Registration for the 2016 MPA Coming Soon!
+------------------------------------------
 
+<!--
 * <strike>**Overnight camper:** <%= number_to_currency overnight_tuition %> per camper</strike>
 _(sold out)_
 * <strike>**Day camper:** <%= number_to_currency day_tuition %> per camper</strike>
 _(sold out)_
 
 *A $100 **non-refundable** deposit must accompany all applications.*
+-->
 
 Please review our [Refund Policy](/page/refund-policy).
 
+<!--
 ### If you choose to change your status from an overnight camper to a day
 camper, or vice-versa, a $30.00 administrative fee will be added to your balance.
 
@@ -30,6 +33,7 @@ If a camper has paid <%= number_to_currency overnight_tuition %> to be an
 overnight camper, then decides to switch to a day camper, they would be
 charged the $30.00 administrative fee from the amount they've over paid,
 and therefore refunded a total of <%= number_to_currency(overnight_tuition - day_tuition - 30) %>
+-->
 
 Sorry, there are no team or group rates.
 
