Need to print the year!

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -59,7 +59,7 @@ title: "Official Home Page"
 
 <div id="secondary-header">
   <div class="container">
-    <h1><% year %> MANNING PASSING ACADEMY</h1>
+    <h1><%= year %> MANNING PASSING ACADEMY</h1>
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
