--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -73,10 +73,10 @@ title: "Official Home Page"
 <div id="home-description" class="container">
   <div class="row">
     <div class="col-md-4">
-      <h4>20th Anniversary</h4>
+      <h4>21st Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
-        For 20 years, the Manning Passing Academy has been helping players
+        For over 20 years, the Manning Passing Academy has been helping players
         fully realize their potential on and off of the football field.
       </p>
     </div>
