--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,15 +7,13 @@ title: "Official Home Page"
     <div id="mpa-carousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#mpa-carousel" data-slide-to="0" class="active"></li>
-        <!--
         <li data-target="#mpa-carousel" data-slide-to="1"></li>
         <li data-target="#mpa-carousel" data-slide-to="2"></li>
-        -->
       </ol>
 
       <div class="carousel-inner">
         <!--
-        <div class="item active">
+        <div class="item">
           <% link_to online_registration_link do %>
             <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
           <% end %>
@@ -26,9 +24,8 @@ title: "Official Home Page"
             <%= image_tag 'carousel-football.png', alt: 'Free Spalding TF-SB1 Football.' %>
           <% end %>
         </div>
-        -->
 
-        <div class="item active">
+        <div class="item">
           <% link_to '/documents/reminders.pdf' do %>
             <%= image_tag 'carousel-reminders.png', alt: '2015 MPA Reminders' %>
           <% end %>
@@ -37,6 +34,13 @@ title: "Official Home Page"
         <div class="item">
           <% link_to '/page/purpose/' do %>
             <%= image_tag 'carousel-2015-mpa.png', alt: '2015 MPA' %>
+          <% end %>
+        </div>
+        -->
+
+        <div class="item active">
+          <%= link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9618705' do %>
+            <%= image_tag 'carousel-photos.png', alt: '2015 MPA Photos' %>
           <% end %>
         </div>
 
