Weird case where you DONT'T print the output of a link_to helper that I always forget

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -39,7 +39,7 @@ title: "Official Home Page"
         -->
 
         <div class="item active">
-          <%= link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9618705' do %>
+          <% link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9618705' do %>
             <%= image_tag 'carousel-photos.png', alt: '2015 MPA Photos' %>
           <% end %>
         </div>
