--- a/source/page/important-dates.html.md.erb
+++ b/source/page/important-dates.html.md.erb
@@ -5,7 +5,7 @@ title: "Important Dates"
 Important Dates
 ===============
 
-**Reigistration Begins** - October 1, 2014
+**Reigistration Begins** - October 1
 
 **Payment-in-Full for Pre-Registered Campers** - <%= balance_due_date.strftime "%B %-d, %Y" %>
 ($100 late fee thereafter)
