--- a/source/page/history.html.md.erb
+++ b/source/page/history.html.md.erb
@@ -8,14 +8,14 @@ History
 The Manning Passing Academy is owned and operated by the first family of
 football: Archie, Cooper, Peyton and Eli Manning… and is always an
 integral part of their lives. As such, their summer vacations always
-revolve around the annual football camp which is celebrating its 20th 
+revolve around the annual football camp which is celebrating its 21st
 anniversary. The Mannings are always the first to arrive, and the last
 to leave. They eat and sleep on-campus along with the rest of the
 campers and staff.
 
-The MPA is looking forward to its 11th year at Nicholls State University
-in Thibodaux, Louisiana. Due to the university’s vast layout and
-proximity of playing fields… it became a natural attraction for the MPA.
+The MPA is looking forward to its 12th year at Nicholls State University
+in Thibodaux, Louisiana. Due to the university's vast layout and
+proximity of playing fields, it became a natural attraction for the MPA.
 Nicholls State served as the former site of the New Orleans Saints
 Training Camp, a distinction not lost on the Mannings who are always on
 the lookout to improve the quality of the camp any way they can. The
@@ -26,7 +26,7 @@ years (high school). It was this concern that motivated the Mannings to
 bring together some of the most successful and brightest coaches and
 players from the professional, college, and high school ranks. And
 although the Manning name has been practically synonymous with the
-quarterback position for almost four decades… the MPA is not just for
+quarterback position for almost four decades, the MPA is not just for
 QBs.
 
 <%= image_tag 'history.jpg', class: 'img-responsive img-thumbnail' %>
