Update executive staff

--- a/source/page/executive-staff.html.md.erb
+++ b/source/page/executive-staff.html.md.erb
@@ -92,9 +92,9 @@ practice as he hosts a live Q&A sessions with all the college players on staff.
 He is currently a partner at Howard Weil Inc., an energy investment boutique in
 New Orleans and is active with the National Multiple Sclerosis Society, The
 Academy of Sacred Heart and his alma mater Isidore Newman School. He and his
-wife Ellen are the proud parents of an 11-year-old daughter May, and two sons,
-Arch (10) and Heid (8). Cooper remains the most handsome Manning and has no
-plans of losing that title.
+wife Ellen are the proud parents of May, and two sons, Arch, and Heid.
+
+Cooper remains the most handsome Manning and has no plans of losing that title.
 
 <div class="clearfix"></div> <hr />
 
@@ -106,9 +106,9 @@ plans of losing that title.
 Peyton Manning - Senior Associate Director
 ------------------------------------------
 
-A 17-year NFL veteran, Manning is widely regarded as one of the best
-quarterbacks to have ever played the game as the league’s only five-time MVP
-whose 13 Pro Bowl selections are the most ever by a QB.
+Manning is widely regarded as one of the best quarterbacks to have ever played
+the game as the league’s only five-time MVP whose 13 Pro Bowl selections are
+the most ever by a QB.
 
 Selected with the first overall pick in the 1998 NFL Draft by the Indianapolis
 Colts, Manning quickly made his presence known, setting five different NFL
@@ -273,8 +273,8 @@ children, Lindsay, and Eugene IV.
 Jeff "Hawk" Hawkins - Associate Director
 ----------------------------------------
 
-Hawk is entering his 19th year as Associate Camp Director. He is responsible for
-all aspects of administration. He is in his 14th season at the University of
+Hawk has been the Associate Camp Director since 1997. He is responsible for
+all aspects of administration. He is in his 15th season at the University of
 Oregon where he serves as the Senior Associate Athletic Director for Football
 Administration and the Director of the Hatfield-Dowlin Complex. Hawkins spent
 three years in the U.S. Army after high school. He earned his undergraduate
@@ -301,7 +301,7 @@ Amy reside in Eugene, Oregon with their daughter Gabrielle.
 Kyle Wiest - Assistant Director
 -------------------------------
 
-Kyle, is entering his 13th year at the MPA and serves as the director of camp
+Kyle, is entering his 14th year at the MPA and serves as the director of camp
 administration, responsible for the day-to-day operations of the camp. His
 responsibilities include overseeing all aspects of administration and
 information technology. Wiest, a Masters recipient from the University of Oregon
@@ -332,15 +332,13 @@ the University of Oregon athletic department.
 Greg Blackwell - Director of Public Relations
 ---------------------------------------------
 
-Greg will be entering his 17th year with the camp and his 14th year in the role
-of Director of Public Relations. He is currently the Director of THE TCU
-Lettermen's Association at Texas christian university, after serving as the
-Director of Communications for the Allstate Sugar Bowl in New
-
-Orleans, LA from 1997 - 2007. A native of Burbank, CA, Greg served in the armed
-forces after high school as a Paratrooper in the 82nd Airborne Division before
-moving on to college where he earned a bachelor's degree in Communications from
-Memphis State University.
+Greg has been with the MPA since 1999 as the Director of Public Relations.
+He is currently the Director of THE TCU Lettermen's Association at Texas
+Christian University, after serving as the Director of Communications for the
+Allstate Sugar Bowl in New Orleans, LA from 1997 - 2007. A native of Burbank,
+CA, Greg served in the armed forces after high school as a Paratrooper in the
+82nd Airborne Division before moving on to college where he earned a bachelor's
+degree in Communications from Memphis State University.
 
 He and his wife Lydia reside in Fort Worth, Texas with their son Christian.
 
@@ -354,8 +352,8 @@ He and his wife Lydia reside in Fort Worth, Texas with their son Christian.
 Andy Solari - Director of Communications
 ----------------------------------------
 
-Andy is entering his 12th year at the MPA and has served in virtually every
-capacity. Currently he oversees all communications and assists in merchandising.
+Since 2003, Andy has  served in virtually every capacity. Currently he oversees
+all communications and assists in merchandising.
 
 He is a Telecommunications Specialist for the Massachusetts State Lottery
 Commission where he plays an integral part in the design and maintenance of the
@@ -377,11 +375,10 @@ their three children: Jessica, Emily, and Tony.
 Ed Nishioka - Director of Marketing and Promotions
 --------------------------------------------------
 
-Ed is entering in his 9th year with the Manning Passing Academy. He handles
-local marketing and video production for the camp.
+Ed has handled local marketing and video production for the MPA since 2006.
 
 His company, DNA Communications LLC, has handled media, marketing and PR for the
-NFL Pro Bowl for the past 18 years. He has an extensive sports background
+NFL Pro Bowl for the past 19 years. He has an extensive sports background
 working with the United States Olympic Committee in Track and Field, Pete Newell
 Big Man Camp, World Championship Kickboxing, Hawaiian Super Prix CART Race,
 Basketball Camps and as a TV News Sports Reporter at KHSL. He has also done a
@@ -413,9 +410,8 @@ University of Nevada Las Vegas.
 Jim Marinelli - Director of Operations
 --------------------------------------
 
-Entering his 11th year associated with the MPA, Jim oversees all aspects of
-logistical operations of the camp including set-up and break-down and everything
-in between.
+Since 2004, Jim has overseen all aspects of logistical operations of the camp
+including set-up and break-down and everything in between.
 
 <div class="clearfix"></div> <hr />
 
@@ -440,12 +436,12 @@ in Boston, MA.
 Parker Waters - Director of Photography
 ----------------------------------------
 
-Parker is entering his sixth year with Manning Passing Academy as the camp
-photographer.  He currently serves as the photographer for Tulane Athletics,the
-New Orleans Zephyrs (AAA affiliate of the Miami Marlins) and SportsNola.com. He
-regularly covers both NFL and NBA games, high school games for MaxPreps and has
-covered the Superbowl and National Championships in football, basketball and
-golf.
+Parker has been the official photographer for the MPA since 2009, capturing
+the exeperiences of campers and staff alike. He currently serves as the
+photographer for Tulane Athletics,the New Orleans Zephyrs (AAA affiliate of the
+Miami Marlins) and SportsNola.com. He regularly covers both NFL and NBA games,
+high school games for MaxPreps and has covered the Superbowl and National
+Championships in football, basketball and golf.
 
 Parker is originally from Fort Walton Beach, FL and now resides in New Orleans.
 He earned his BA degree from Tulane University.  Prior to pursuing his career
