Open registration links for 2016

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,11 +5,11 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-Registration for the 2016 MPA is Coming Soon!
----------------------------------------------
+Registration for the 2016 MPA is Now Open!
+------------------------------------------
 
-* <strike>Online Registration</strike>
-* <strike>Printable Application</strike>
+* [Online Registration](<%= online_registration_link %>)
+* [Printable Application](/documents/application.pdf)
 * [Camper Confirmation](<%= confirmation_link %>)
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
