--- a/source/page/tuition.html.md.erb
+++ b/source/page/tuition.html.md.erb
@@ -5,22 +5,19 @@ title: "Tuition"
 Tuition
 =======
 
-Registration for the 2016 MPA Coming Soon!
+Registration for the 2016 MPA is Now Open!
 ------------------------------------------
 
-<!--
-* <strike>**Overnight camper:** <%= number_to_currency overnight_tuition %> per camper</strike>
-_(sold out)_
-* <strike>**Day camper:** <%= number_to_currency day_tuition %> per camper</strike>
-_(sold out)_
+* **Overnight camper:** <%= number_to_currency overnight_tuition %> per camper
+* **Day camper:** <%= number_to_currency day_tuition %> per camper
 
 *A $100 **non-refundable** deposit must accompany all applications.*
--->
 
 Please review our [Refund Policy](/page/refund-policy).
 
-<!--
-### If you choose to change your status from an overnight camper to a day
+---
+
+If you choose to change your status from an overnight camper to a day
 camper, or vice-versa, a $30.00 administrative fee will be added to your balance.
 
 For example: If a camper has paid <%= number_to_currency day_tuition %>
@@ -33,7 +30,6 @@ If a camper has paid <%= number_to_currency overnight_tuition %> to be an
 overnight camper, then decides to switch to a day camper, they would be
 charged the $30.00 administrative fee from the amount they've over paid,
 and therefore refunded a total of <%= number_to_currency(overnight_tuition - day_tuition - 30) %>
--->
 
 Sorry, there are no team or group rates.
 
