Update home page carousel

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,11 +9,11 @@ title: "Official Home Page"
         <li data-target="#mpa-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#mpa-carousel" data-slide-to="1"></li>
         <li data-target="#mpa-carousel" data-slide-to="2"></li>
+        <li data-target="#mpa-carousel" data-slide-to="3"></li>
       </ol>
 
       <div class="carousel-inner">
-        <!--
-        <div class="item">
+        <div class="item active">
           <% link_to online_registration_link do %>
             <%= image_tag 'carousel-registration-open.png', alt: 'Registration is now open!' %>
           <% end %>
@@ -25,6 +25,7 @@ title: "Official Home Page"
           <% end %>
         </div>
 
+        <!--
         <div class="item">
           <% link_to '/documents/reminders.pdf' do %>
             <%= image_tag 'carousel-reminders.png', alt: '2015 MPA Reminders' %>
@@ -38,7 +39,7 @@ title: "Official Home Page"
         </div>
         -->
 
-        <div class="item active">
+        <div class="item">
           <% link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9618705' do %>
             <%= image_tag 'carousel-photos.png', alt: '2015 MPA Photos' %>
           <% end %>
