Remove paper app for 2016

--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -9,7 +9,9 @@ Registration for the 2016 MPA is Now Open!
 ------------------------------------------
 
 * [Online Registration](<%= online_registration_link %>)
-* [Printable Application](/documents/application.pdf)
+* <strike>Printable Application</strike>  
+_No longer available_
+<%#* [Printable Application](/documents/application.pdf)%>
 * [Camper Confirmation](<%= confirmation_link %>)
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
