--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -7,5 +7,6 @@
     <li><%= link_to 'Sign-up', '/page/application-registration' %></li>
     <li><%= link_to 'Privacy policy', '/page/privacy' %></li>
     <li><%= link_to 'Contact us', '/page/contact-us' %></li>
+    <li><img src="/images/mpa-logo.png" height="42" alt="MPA" /></li>
   </ul>
 </footer>
