--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -18,8 +18,8 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="//www.bankplus.net/">
-        <%= image_tag 'sponsors-bank-plus.gif', class: 'img-responsive' %>
+      <a href="//http://www.alignmed.com/">
+        <%= image_tag 'sponsors-alignmed.png', class: 'img-responsive' %>
       </a>
     </td>
     <td>
