Fix typo on link to alignmed.com, and remove explicit protocal to nike.com

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -13,12 +13,12 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="http://www.nike.com/us/en_us/">
+      <a href="//www.nike.com/us/en_us/">
         <%= image_tag 'sponsors-nike.png', class: 'img-responsive' %>
       </a>
     </td>
     <td>
-      <a href="//http://www.alignmed.com/">
+      <a href="//www.alignmed.com/">
         <%= image_tag 'sponsors-alignmed.png', class: 'img-responsive' %>
       </a>
     </td>
