Move sponsors to separate menu list item

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -90,7 +90,6 @@
             Extras <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/page/sponsors/">Sponsors</a></li>
             <li><a href="/page/speed-seminar/">Speed seminar</a></li>
             <li><a href="/page/sunday-chapel-and-mass/">Sunday chapel &amp; mass</a></li>
             <li><a href="/page/camp-photos/">Camp photos</a></li>
@@ -99,6 +98,8 @@
             <li><a href="/page/faq/">FAQ</a></li>
           </ul>
         </li>
+        <li>
+          <a href="/page/sponsors">Sponsors</a>
         <li>
           <a href="/page/contact-us/">Contact us</a>
         </li>
