--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -32,6 +32,7 @@
             Sign up<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
+            <li><%= link_to 'Confirmation page', confirmation_link %></li>
             <li><a href="/page/important-dates/">Important dates</a></li>
             <li><a href="/page/eligibility/">Eligibility</a></li>
             <li><a href="/page/tuition/">Tuition</a></li>
