Revise online fee amount

--- a/source/page/refund-policy.html.md.erb
+++ b/source/page/refund-policy.html.md.erb
@@ -28,10 +28,10 @@ you have paid beyond that.
 Refunds will not be processed until after August 1, and then only after
 a written request has been submitted.
 
-**$15 Online Registration Fee**
+**Online Registration Fee**
 -------------------------------
 
-For campers who register online, a $15 non-refundable registration fee is added.
+For campers who register online, a $20 non-refundable registration fee is added.
 This fee goes to a third party who helps the MPA accept payments online.
 
 <%= image_tag 'refund-policy.jpg', class: 'img-responsive img-thumbnail' %>
