Automate online shuttle link

--- a/source/page/airport-shuttle.html.md.erb
+++ b/source/page/airport-shuttle.html.md.erb
@@ -8,7 +8,7 @@ Shuttle / Transportation
 Air Travel
 ----------
 
-* [Sign Up for a Shuttle Online](https://campregistrationsystems.com/manning-passing-academy/2014-mpa-shuttle)  
+* [Sign Up for a Shuttle Online](<%= online_shuttle_link %>)
   *$5 non-refundable online registration fee applies*
 * [Printable Shuttle Form](/documents/shuttle.pdf)
 
