Use helper for balance-due date

--- a/source/page/preparing-for-camp.html.md.erb
+++ b/source/page/preparing-for-camp.html.md.erb
@@ -9,8 +9,8 @@ Preparing for Camp
   contact numbers, etc.) is correct on the
   [confirmation page](<%= confirmation_link %>)
   page so that you are grouped correctly during drills and 7 on 7.
-* All balances must be paid in full by May 1 or else you may incur a
-  $100 late fee or be dropped from the rolls. No exceptions.
+  * All balances must be paid in full by <%= balance_due_date %> or else you may
+  incur a $100 late fee or be dropped from the rolls. No exceptions.
 * All overnight campers must provide their own bedding; sleeping bags
   are recommended. You must also provide your own towels, wash cloths,
   and any other toiletries you need. Go to [room and board](/page/room-and-board).
