Add new point to media about vacating the Century room

--- a/source/page/media-only.html.md.erb
+++ b/source/page/media-only.html.md.erb
@@ -89,6 +89,12 @@ camp. The interview procedure is as follows:
   coaches and counselors, who agreed to do interviews, will be made
   available for their interviews at break out areas inside the Century
   Club Room. These interviews will last for approximately 20 minutes.
+* The Century Club Room is open to the media for the interview session only
+  and will close at the conclusion of the press conference and will be off
+  limits to all media. Please plan on leaving the interview area after the
+  interviews have concluded. If you need a place to file your story,
+  accommodations can be made by contacting the Nicholls State Athletic Media
+  Relations office prior to the interview session.
 
 ### Quarterback Competitions
 
