Fix meta keyword tag

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,7 +6,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="device-width, initial-scale=1">
     <meta name="description" content="Manning Passing Academy. The premier offensive football skills camp in the nation for QBs, RBs, WRs, and TEs.">
-    <meta name="keywors" content="Manning Passing Academy, MPA, Peyton Manning football camp, Eli Manning football camp">
+    <meta name="keywords" content="Manning Passing Academy, MPA, Peyton Manning football camp, Eli Manning football camp">
     <meta name="author" content="Kyle Wiest">
     
     <title><%= "Manning Passing Academy: #{current_page.data.title}" %></title>
