--- a/source/page/facilities.html.md.erb
+++ b/source/page/facilities.html.md.erb
@@ -6,8 +6,9 @@ Facilities
 ==========
 
 The MPA utilizes all the residence halls, practice fields, theatres,
-meeting rooms, and dining facilities that Nicholls State has to offer.
-Everything is within a close walking distance (5 minutes) of each other,
+meeting rooms, and dining facilities that
+[Nicholls State](https://www.nicholls.edu/manning-passing-academy/) has to
+offer. Everything is within a close walking distance (5 minutes) of each other,
 and everything is first-class.
 
 Maps of the Nicholls State campus can be found [here](/page/campus-map).
