--- a/source/page/local-accommodations.html.md.erb
+++ b/source/page/local-accommodations.html.md.erb
@@ -9,7 +9,8 @@ Off-Campus Accommodations
 -------------------------
 
 There are ample accommodations in the local community that can be
-secured by visiting the [Bayou Region Accommodations](http://travel.ian.com/hotel/searchresults?currencyCode=USD&userCity=null,null,null&additionalDataString=vrBookingSource%7Cnull&locale=en_US&searchParam=3CE44484-F4A4-44D2-8F2A-FA2896A15806&searchType=DESTINATION&cid=268128)
+secured by visiting the
+[Bayou Region Accommodations](https://www.nicholls.edu/manning-passing-academy/)
 page.
 
 Sorry, but due to insurance issues, we are unable to provide on-campus
