More links to Nicholls

--- a/source/page/history.html.md.erb
+++ b/source/page/history.html.md.erb
@@ -13,7 +13,8 @@ anniversary. The Mannings are always the first to arrive, and the last
 to leave. They eat and sleep on-campus along with the rest of the
 campers and staff.
 
-The MPA is looking forward to its 12th year at Nicholls State University
+The MPA is looking forward to its 12th year at
+[Nicholls State University](https://www.nicholls.edu/manning-passing-academy/)
 in Thibodaux, Louisiana. Due to the university's vast layout and
 proximity of playing fields, it became a natural attraction for the MPA.
 Nicholls State served as the former site of the New Orleans Saints
