--- a/source/page/check-in-process.html.md.erb
+++ b/source/page/check-in-process.html.md.erb
@@ -6,8 +6,9 @@ Check-In Process
 ================
 
 Check-in is between 1:00pm and 3:00pm on Thursday at Stopher Gymnasium
-located on the campus of Nicholls State University in Thibodaux, La.
-There is no need to arrive any earlier than 1pm as two (2) hours will be
-plenty of time to process all of our campers.
+located on the campus of
+[Nicholls State University](https://www.nicholls.edu/manning-passing-academy/)
+in Thibodaux, La. There is no need to arrive any earlier than 1pm as two (2)
+hours will be plenty of time to process all of our campers.
 
 <%= image_tag 'check-in-process.jpg', class: 'img-responsive img-thumbnail' %>
