Add SI Play logo to sponors

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -79,5 +79,8 @@ Sponsors
     <td>
       <%= image_tag 'sponsors-mannings.png', class: 'img-responsive' %>
     </td>
+    <td>
+      <%= image_tag 'sponsors-si-play.png', class: 'img-responsive' %>
+    </td>
   </tr>
 </table>
