Add link to camp reminders on home page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -46,6 +46,12 @@ title: "Official Home Page"
         -->
 
         <div class="item active">
+          <% link_to 'https://s3.amazonaws.com/manning-passing-academy/2016-MPA-Pocket-Book.pdf' do %>
+            <%= image_tag 'carousel-reminders.png', alt: 'Pre-Camp Reminders' %>
+          <% end %>
+        </div>
+
+        <div class="item">
           <% link_to '/page/online-store/' do %>
             <%= image_tag 'carousel-online-store.png', alt: 'Online Store now open.' %>
           <% end %>
