Add link to 2016 photos

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -39,15 +39,15 @@ title: "Official Home Page"
         </div>
 
         <div class="item">
-          <% link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9618705' do %>
-            <%= image_tag 'carousel-photos.png', alt: '2015 MPA Photos' %>
+          <% link_to 'https://s3.amazonaws.com/manning-passing-academy/2016-MPA-Pocket-Book.pdf' do %>
+            <%= image_tag 'carousel-reminders.png', alt: 'Pre-Camp Reminders' %>
           <% end %>
         </div>
         -->
 
         <div class="item active">
-          <% link_to 'https://s3.amazonaws.com/manning-passing-academy/2016-MPA-Pocket-Book.pdf' do %>
-            <%= image_tag 'carousel-reminders.png', alt: 'Pre-Camp Reminders' %>
+          <% link_to 'http://parkerwaters.photoreflect.com/store/thumbpage.aspx?e=9853287' do %>
+            <%= image_tag 'carousel-photos.png', alt: 'MPA Photos' %>
           <% end %>
         </div>
 
@@ -75,7 +75,7 @@ title: "Official Home Page"
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
     <div class="bg-danger">
-      <h3 class="text-muted">Registration for the 2016 MPA is now closed.</h3>
+      <h3 class="text-muted">Registration for the 2017 MPA will open in October.</h3>
     </div>
     <!--
     <%= link_to 'Sign Up Now!', online_registration_link,
