--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -72,10 +72,10 @@ title: "Official Home Page"
   <div class="container">
     <h1>MANNING PASSING ACADEMY</h1>
     <h2>Registration for the 2017 MPA will open in October.</h2>
-    <!--
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
+    <!--
     <div class="bg-danger">
       <h3 class="text-muted">Registration for the 2017 MPA will open in October.</h3>
     </div>
@@ -88,7 +88,7 @@ title: "Official Home Page"
 <div id="home-description" class="container">
   <div class="row">
     <div class="col-md-4">
-      <h4>21st Anniversary</h4>
+      <h4>22nd Anniversary</h4>
       <%= image_tag 'home-description-cooper-archie.png' %>
       <p>
         For over 20 years, the Manning Passing Academy has been helping players
@@ -115,3 +115,5 @@ title: "Official Home Page"
     </div>
   </div>
 </div>
+
+<script data-leadbox="144134d73f72a2:1015970cdf46dc" data-url="https://smshooks.leadpages.co/leadbox/144134d73f72a2%3A1015970cdf46dc/5706803308396544/" data-config="%7B%22type%22%3A%22time%22%2C%22settings%22%3A%7B%22seconds%22%3A2%2C%22days%22%3A7%2C%22views%22%3A0%7D%7D" type="text/javascript" src="https://smshooks.leadpages.co/leadbox-1472587837.js"></script>
