--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -5,13 +5,13 @@ title: "Application Registration"
 Registration / Application
 ==========================
 
-Registration for the 2016 MPA is closed.
-----------------------------------------
+Registration for the 2017 MPA will open October 1
+-------------------------------------------------
 
-<%#* [Online Registration](<%= online_registration_link %>)%>
-<%#* <strike>Printable Application</strike>  %>
-<%#_No longer available_%>
-<%#* [Printable Application](/documents/application.pdf)%>
-<%#* [Camper Confirmation](<%= confirmation_link %>)%>
+<!--
+  * [Online Registration](<%= online_registration_link %>)
+  * [Printable Application](/documents/application.pdf)
+  * [Camper Confirmation](<%= confirmation_link %>)
+-->
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
