Rooms DO include beds

--- a/source/page/faq.html.md.erb
+++ b/source/page/faq.html.md.erb
@@ -33,8 +33,8 @@ on the ball.
 
 **Q.** I’m an overnight camper, what do I need to bring with me?  
 **A.** All overnight campers must provide their own bedding; sleeping bags are
-recommended. You must also provide your own towels, wash cloths, and any other
-toiletries you need.
+recommended. Rooms include a bed and mattress for each camper, but you must
+provide your own towels, wash cloths, and any other toiletries.
 
 **Q.** I'm an overnight camper, what should I NOT bring with me?  
 **A.** We recommend that you do NOT bring anything of value (jewelry, radios,
