--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -65,7 +65,7 @@ title: "Official Home Page"
 <div id="secondary-header">
   <div class="container">
     <h1>MANNING PASSING ACADEMY</h1>
-    <h2>Registration for the 2017 MPA is now open!</h2>
+    <h2>Nicholls State University - Thibodaux, LA</h2>
     <h2>
       <%= "#{start_date.strftime('%A, %B %-d')} - #{end_date.strftime('%A, %B %-d, %Y')}".upcase %>
     </h2>
