Comment out voicemail line until problem solved

--- a/source/page/contact-us.html.md.erb
+++ b/source/page/contact-us.html.md.erb
@@ -8,7 +8,7 @@ Contact Information
 **Email:** [info@manningpassingacademy.com](mailto:info@manningpassingacademy.com)  
 *Your best way to contact us*
 
-**Voicemail:** (541) 359-2343
+<%#**Voicemail:** (541) 359-2343%>
 
 **Fax:** (541) 225-5146 *(secure line)*
 
