--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -11,7 +11,8 @@ Registration for the 2017 MPA will open October 1
 -->
 
   * [Online Registration](<%= online_registration_link %>)
-  * [Printable Application](/documents/application.pdf)
+  <%#* [Printable Application](/documents/application.pdf)%>
+  * <strike>Printable Application</strike>
   * [Camper Confirmation](<%= confirmation_link %>)
 
 <%= image_tag 'application-registration.jpg', class: 'img-responsive img-thumbnail' %>
