Update fax line copy

--- a/source/page/contact-us.html.md.erb
+++ b/source/page/contact-us.html.md.erb
@@ -10,7 +10,7 @@ Contact Information
 
 <%#**Voicemail:** (541) 359-2343%>
 
-**Fax:** (541) 225-5146 *(secure line)*
+**Secure Fax Line:** (541) 225-5146
 
 **Mailing Address**  
 Manning Passing Academy  
