Link to Spalding homepage, not football page

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -23,7 +23,7 @@ Sponsors
       </a>
     </td>
     <td>
-      <a href="//www.spalding.com/football/index.php">
+      <a href="//www.spalding.com/">
         <%= image_tag 'sponsors-spalding.gif', class: 'img-responsive' %>
       </a>
     </td>
