Add Riddell to sponsors

--- a/source/page/sponsors.html.md.erb
+++ b/source/page/sponsors.html.md.erb
@@ -82,5 +82,10 @@ Sponsors
     <td>
       <%= image_tag 'sponsors-si-play.png', class: 'img-responsive' %>
     </td>
+    <td>
+      <a href="//www.riddell.com/">
+        <%= image_tag 'sponsors-riddell.jpg', class: 'img-responsive' %>
+      </a>
+    </td>
   </tr>
 </table>
