--- a/source/page/application-registration.html.md.erb
+++ b/source/page/application-registration.html.md.erb
@@ -10,8 +10,12 @@ Registration for the 2017 MPA will open October 1
 -------------------------------------------------
 -->
 
-  * [Online Registration](<%= online_registration_link %>)
-  <%#* [Printable Application](/documents/application.pdf)%>
+Registration for the 2017 MPA is now closed
+-------------------------------------------
+
+  <!-- * [Online Registration](<%= online_registration_link %>) -->
+  <!-- * [Printable Application](/documents/application.pdf) -->
+  * <strike>Online Registration</strike>
   * <strike>Printable Application</strike>
   * [Camper Confirmation](<%= confirmation_link %>)
 
